--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,10 @@
 
     <string name="hello_first_fragment">Enter salary info here</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="currency_autocomplete_hint">Type currency symbol here</string>
+    <string name="salary_filed">Type salary amount here </string>
+    <string name="salary_period_menu">Choose payroll period </string>
+    <string name="salary_period_hourly">hourly </string>
+    <string name="salary_period_monthly">monthly </string>
+    <string name="salary_period_yearly">yearly </string>
 </resources>
