issues with pasing args between 2 screens are not resolved... maybe got to public values ? or just a single screen app(which is boring and not so correct)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="salary_period_hourly">hourly </string>
     <string name="salary_period_monthly">monthly </string>
     <string name="salary_period_yearly">yearly </string>
+    <string name="currency_output">Target currency </string>
 </resources>
