--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="next">Next</string>
     <string name="previous">Previous</string>
 
-    <string name="hello_first_fragment">Enter salary info here</string>
+    <string name="hello_first_fragment">Enter salary info below</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="second_fragment_intro">Your converted salary is . Arg: %1$s</string>
 
@@ -20,4 +20,14 @@
     <string name="salary_period_yearly">yearly </string>
     <string name="currency_output">Target currency </string>
     <string name="convert_button_title">Convert please </string>
+
+    <string-array name="currencies_array">
+        <item>RUB</item>
+        <item>EUR</item>
+        <item>GBP</item>
+        <item>USD</item>
+        <item>CAD</item>
+        <item>AUD</item>
+        <item>JPY</item>
+    </string-array>
 </resources>
